--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
   <body class="bg-dark text-slate-200 antialiased overflow-x-hidden selection:bg-fuchsia-500/40 selection:text-white">
     <div id="root"></div>
     <div class="bg-noise"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
